15_node_affilnity_soft.yml
apiVersion: v1
kind: Pod
metadata:
  name: with-node-affinity-soft
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: disk
            operator: In
            values:
            - floppy # no disk type is of floppy, as it is soft affinity, pod get created anywhere
  containers:
  - name: with-node-affinity-soft
    image: nginx
