16_pod_affinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-anti-affinity2
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - front-end
        topologyKey: kubernetes.io/hostname # consider affinity on node hostname
  containers:
  - name: pod-affinity
    image: nginx
