19_privelege_container.yml
apiVersion: v1
kind: Pod
metadata:
  name: privileged
spec:
  containers:
   - name: privileged
     image: nginx
     securityContext: # these two lines will set it to privileged containr
       privileged: true
