22_pod_volume_using_pvc.yml
apiVersion: v1
kind: Pod
metadata:
 name: demopod-volume
spec:
 containers:
  - image: nginx
    name: test-container
    volumeMounts:
     - mountPath: /data
       name: first-volume

  - volumes:
     - name: first-volume
       persistentVolumeClaim:
         claimName: pvc-alpha
