3_pod_port.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
   - name: my-nginx
     image: nginx
     ports:
      - containerPort: 8080
