4_pod_label.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod1
  labels:
    env: prod
    app: avi-nginx
spec:
  containers:
   - name: my-nginx
     image: nginx
