6_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avi-deployment
  labels:
    app: guestbook
    tier: frontend
spec:
  replicas: 5
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx-container
        # image: nginx
        image: nginx:1.17.3
