7_liveness_probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness
spec:
  containers:
   - name: liveness
     image: ubuntu
     tty: true
     livenessProbe:
      exec:
        command:
          - service
          - nginx
          - status
      initialDelaySeconds: 20
      periodSeconds: 5
    
# this script will return error code other than 0 and restart nginx container ,
  # if nginx is not install
  # if nginx is not running
