10_node_port_service.yml
apiVersion: v1
kind: Service
metadata:
  name: avi-nodeport
spec:
  selector:
   run: nginx
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
