11_service_type_loadblalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: avi-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80 # loadbalancer port
    targetPort: 80
  selector:
   run: nginx
