9_service_clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: avi-cluster-service-with-selector
spec:
  selector:
    app: nginx # we get this from describe pod
  ports:
  - port: 80 #host port
    targetPort: 80 # container port
  
# here we dont need to use endpoints as selectors will works
