12_nginx_egress.yml
# i have first install nginx ingress controller using helm

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations: # we are using nginx ingress controller
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:

  # 1st host section

  # if request come which have host header of web1.example.com that request will forwarded to service 1
  - host: web1.example.com
    http:
      paths:
      - backend: #service which will handle the traffic
          serviceName: service1
          servicePort: 80

  # 2st host section
  - host: web2.example.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80

# here we are using nginx ingress controller, hence in the metadata we have defined annotation of nginx

# this will work as default ingress 

  - http:
      paths:
      - backend:
          serviceName: default-service-container
          servicePort: 80
